--- a/witches.html
+++ b/witches.html
@@ -1,3 +1,7 @@
+<!-- Project Hecate v1.0 -->
+<!-- by EtoileLion -->
+<!-- Game System Copyright Margaret Krohn, used with permission. -->
+<input type='hidden' name='attr_sheet_opened'>
 <input type='hidden' class='sheet-isconfig' name='attr_isconfig' value="0">
 <input type='hidden' class='sheet-sheettype' name='attr_sheettype' value="witch">
 <div class='sheet-witch'>
@@ -31,35 +35,37 @@
 		</p>		
 		<h2>About Me</h2>		
 		<div class='2colrow'>
-		<div class='col'>
-			<span data-i18n="physically">Physically</span><br />
-			<input type='text' name='attr_witchphysadj1' data-i18n-placeholder="adjective">
-			<input type='text' name='attr_witchphysadj2'  data-i18n-placeholder="adjective">
-		</div>
-		<div class='col'>
-		<span data-i18n="hair">Hair</span><br><input type='text' name='attr_witchhair' data-i18n-placeholder="adjective"><br> <span data-i18n="eyes">Eyes</span><br><input type='text' name='attr_witcheyes' data-i18n-placeholder="adjective">
-		</div>
+			<div class='col'>
+				<span data-i18n="physically">Physically</span><br />
+				<input type='text' name='attr_witchphysadj1' data-i18n-placeholder="adjective">
+				<input type='text' name='attr_witchphysadj2'  data-i18n-placeholder="adjective">
+			</div>
+			<div class='col'>
+				<span data-i18n="hair">Hair</span><br><input type='text' name='attr_witchhair' data-i18n-placeholder="adjective"><br> <span data-i18n="eyes">Eyes</span><br><input type='text' name='attr_witcheyes' data-i18n-placeholder="adjective">
+			</div>
 		</div>
 		<div class='3colrow'>
-		<div class='col'>
-		<span data-i18n="personality">Personality</span> <input type='text' name='attr_witchpersadj1' data-i18n-placeholder="adjective"><br> <input type='text' name='attr_witchpersadj2' data-i18n-placeholder="adjective"><br><input type='text' name='attr_witchpersadj3' data-i18n-placeholder="adjective">
-		<fieldset class='repeating_personality'>
-			<input type='text' name='attr_witchpersadj' data-i18n-placeholder="adjective">
-		</fieldset>
-		</div>			
-		<div class='col'>
-			<span data-i18n="like">Likes</span><br><input type='text' name='attr_witchlikenoun'  data-i18n-placeholder="noun"><br><input type='text' name='attr_witchlikeverb' data-i18n-placeholder="verb">.
-		<fieldset class='repeating_likes'>
-			<input type='text' name='attr_witchlike'>
-		</fieldset>			
-		</div>
-		<div class='col'>
-			<span data-i18n="hate">Hates</span><br><input type='text' name='attr_witchhatenoun'  data-i18n-placeholder="noun"><br> <input type='text' name='attr_witchhateverb' data-i18n-placeholder="verb">
-		<fieldset class='repeating_hates'>
-			<input type='text' name='attr_witchhate'>
-		</fieldset>			
-<!-- NOTE TO SELF: Hide a value in the repeats, on open first time (check for sheet_opened) add rows with values in hidden fields to create 'default' sets. Set Attrs "repeating_test_"+generateRowID()+"_value" for each repeater, for X times. -->			
-		</div>
+			<div class='col'>
+				<span data-i18n="personality">Personality</span>
+				<fieldset class='repeating_personality'>
+					<input type='hidden' name='attr_witchpershide'>
+					<input type='text' name='attr_witchpersadj' data-i18n-placeholder="adjective">
+				</fieldset>
+			</div>			
+			<div class='col'>
+				<span data-i18n="like">Likes</span>
+				<fieldset class='repeating_likes'>
+					<input type='hidden' name='attr_witchlikehide'>		
+					<input type='text' name='attr_witchlike'>
+				</fieldset>			
+			</div>
+			<div class='col'>
+				<span data-i18n="hate">Hates</span>
+				<fieldset class='repeating_hates'>
+					<input type='hidden' name='attr_witchhatehide'>		
+					<input type='text' name='attr_witchhate'>
+				</fieldset>					
+			</div>
 		</div>
 		<hr>
 		<h2>My School</h2>
@@ -81,16 +87,16 @@
 		<hr>
 		<h2>My Family</h2>
 		<div>
-		<span data-i18n="familyis">My family is</span>&nbsp;<input type='text' name='attr_famadj1' data-i18n-placeholder="adjective">,&nbsp;<input type='text' name='attr_famadj2' data-i18n-placeholder="adjective">,&nbsp;<span data-i18n="and">and</span>&nbsp;<input type='text' name='attr_famadj3' data-i18n-placeholder="adjective">.
+			<span data-i18n="familyis">My family is</span>&nbsp;<input type='text' name='attr_famadj1' data-i18n-placeholder="adjective">,&nbsp;<input type='text' name='attr_famadj2' data-i18n-placeholder="adjective">,&nbsp;<span data-i18n="and">and</span>&nbsp;<input type='text' name='attr_famadj3' data-i18n-placeholder="adjective">.
 		</div>
 		<div class='sheet-flexrow'>
-		<span data-i18n="closesttomy">I am closest to my</span>&nbsp;<input type='text' name='attr_famclose' data-i18n-placeholder="fammember">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_famclosereason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+			<span data-i18n="closesttomy">I am closest to my</span>&nbsp;<input type='text' name='attr_famclose' data-i18n-placeholder="fammember">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_famclosereason' data-i18n-placeholder="reason" class='sheet-flexfield'>
 		</div>
 		<div>
-		<span data-i18n="houseis">My house is</span>&nbsp;<input type='text' name='attr_houseadj1' data-i18n-placeholder="adjective">,&nbsp;<input type='text' name='attr_houseadj2' data-i18n-placeholder="adjective">,&nbsp;<span data-i18n="and">and</span>&nbsp;<input type='text' name='attr_houseadj3' data-i18n-placeholder="adjective">
+			<span data-i18n="houseis">My house is</span>&nbsp;<input type='text' name='attr_houseadj1' data-i18n-placeholder="adjective">,&nbsp;<input type='text' name='attr_houseadj2' data-i18n-placeholder="adjective">,&nbsp;<span data-i18n="and">and</span>&nbsp;<input type='text' name='attr_houseadj3' data-i18n-placeholder="adjective">
 		</div>
 		<div class='sheet-flexrow'>
-		<span data-i18n="favoritehouseplaceis">My favorite place in my house is</span>&nbsp;<input type='text' name='attr_houseloc' data-i18n-placeholder="location">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_houselocreason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+			<span data-i18n="favoritehouseplaceis">My favorite place in my house is</span>&nbsp;<input type='text' name='attr_houseloc' data-i18n-placeholder="location">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_houselocreason' data-i18n-placeholder="reason" class='sheet-flexfield'>
 		</div>
 	</div>
     <div class='sheet-page2 sheet-page'>
@@ -99,57 +105,58 @@
 			<span data-i18n="myspellbookis">My spellbook is</span> <input type='text' name='attr_spellbookadj1'  data-i18n-placeholder="adjective"> and  <input type='text' name='attr_spellbookadj2'  data-i18n-placeholder="adjective">
 		</p>
 		<fieldset class='repeating_spells'>
+			<input type='hidden' name='attr_witchspellhide'>
 		    <div class='sheet-buttonrow'>
-			<div>
-				<input type='hidden' name='attr_hidespell' class='sheet-hidespellcb' value="on">			    
-				<button type='roll' value="&{template:aw} {{result=[[2d8+@{level}+?{'Modifier/Penalty?'|0}]]}} {{roll_name=@{spellname}}} {{name=@{character_name}}} ">
-				<button type='roll' class='sheet-squawk sheet-hidespell' value="&{template:squawk} {{spellname=@{spellname}}} {{desc=@{desc}}} {{label=Level @{level}}}">
+				<div>
+					<input type='hidden' name='attr_hidespell' class='sheet-hidespellcb' value="on">			    
+					<button type='roll' value="&{template:aw} {{result=[[2d8+@{level}+?{'Modifier/Penalty?'|0}]]}} {{roll_name=@{spellname}}} {{name=@{character_name}}} ">
+						<button type='roll' class='sheet-squawk sheet-hidespell' value="&{template:squawk} {{spellname=@{spellname}}} {{desc=@{desc}}} {{label=Level @{level}}}">
 						</button>
-			</button>			
-			</div>
-			<div>
-			<label data-i18n="spellname">Name</label><input type='text' name='attr_spellname'>			
-			</div>
-			<div>
-			<label data-i18n="spelllevel">Level</label>
-			<input type='number' name='attr_level' min=1 value=1>
-			<input type='checkbox' name='attr_hidespell' class='sheet-hidespellcb' checked>
-			</div>
+					</button>			
+				</div>
+				<div>
+					<label data-i18n="spellname">Name</label><input type='text' name='attr_spellname'>			
+				</div>
+				<div>
+					<label data-i18n="spelllevel">Level</label>
+					<input type='number' name='attr_level' min=1 value=1>
+					<input type='checkbox' name='attr_hidespell' class='sheet-hidespellcb' checked>
+				</div>
 			</div>
 			<input type='hidden' name='attr_hidespell' class='sheet-hidespellcb' value="on">
 			<div class='sheet-descrow'>
-			<div>
-						<button type='roll' class='sheet-squawk' value="&{template:squawk} {{spellname=@{spellname}}} {{desc=@{desc}}} {{label=Level @{level}}}">
-						</button>
-			</div>
-			<div>
-			<label data-i18n="spelldesc">Spell Description</label>
-			</div>
-			<textarea name='attr_desc'>
-			</textarea>
+				<div>
+					<button type='roll' class='sheet-squawk' value="&{template:squawk} {{spellname=@{spellname}}} {{desc=@{desc}}} {{label=Level @{level}}}">
+					</button>
+				</div>
+				<div>
+					<label data-i18n="spelldesc">Spell Description</label>
+				</div>
+				<textarea name='attr_desc'>
+				</textarea>
 			</div>			
 			<div class='sheet-2colrow sheet-castsrow'>
-			<div class='sheet-col'>
-			<label data-i18n="spellsuccs">Successful Casts</label><br>
-			<input type='checkbox' name='attr_successcast1'>
-			<input type='checkbox' name='attr_successcast2'>
-			<input type='checkbox' name='attr_successcast3'>
-			</div>
-			<div class='sheet-col'>
-			<label data-i18n="spellfails">Failed Casts</label><br>
-			<input type='checkbox' name='attr_failcast1'>
-			<input type='checkbox' name='attr_failcast2'>
-			<input type='checkbox' name='attr_failcast3'>
-			<input type='checkbox' name='attr_failcast4'>
-			<input type='checkbox' name='attr_failcast5'>
-			</div>
+				<div class='sheet-col'>
+					<label data-i18n="spellsuccs">Successful Casts</label><br>
+					<input type='checkbox' name='attr_successcast1'>
+					<input type='checkbox' name='attr_successcast2'>
+					<input type='checkbox' name='attr_successcast3'>
+				</div>
+				<div class='sheet-col'>
+					<label data-i18n="spellfails">Failed Casts</label><br>
+					<input type='checkbox' name='attr_failcast1'>
+					<input type='checkbox' name='attr_failcast2'>
+					<input type='checkbox' name='attr_failcast3'>
+					<input type='checkbox' name='attr_failcast4'>
+					<input type='checkbox' name='attr_failcast5'>
+				</div>
 			</div>
 		</fieldset>
 	</div>
 	
 </div>
 <div class='sheet-school'>
-   <div class='sheet-header'>
+	<div class='sheet-header'>
 		<input type='text' name='attr_character_name' placeholder="Character Name" data-i18n-placeholder="charactername">
 		<div class='sheet-head-img'></div>
 		<div class='sheet-pagetogglediv'>	
@@ -159,7 +166,7 @@
 				</span>		
 			</label>
 		</div>		
-   </div>
+	</div>
 	<p>
 		<span data-i18n="school-wegoto">We go to </span>
 		<input type='text' name='attr_schoolname'>, <span data-i18n="school-schoolof">the School of</span> <input type='text' name='attr_schoolnoun' placeholder="(Noun)" data-i18n-placeholder="noun">
@@ -177,37 +184,38 @@
 		<span data-i18n="school-an">A[n]</span> <input type='text' name='attr_schoolhwadj' data-i18n-placeholder="adjective" placeholder="(Adjective)"> <span data-i18n="has">has</span> <input type='text' name='attr_schoolhwnoun' placeholder="(Noun)" data-i18n-placeholder="noun">  <input type='text' name='attr_schoolhwverb' data-i18n-placeholder="verb" placeholder="(Verb)"> <span data-i18n="school-ourschool">our school.</span>
 	</p>
 	<h2 data-i18n="school-faculty">Faculty</h2>
+	<hr>
 	<div class='faculty'>
-	<fieldset class="repeating_professors">
-		<input type='hidden' class='modifyprof' name='attr_modifyprof' value='on'>
-	    <div>
-			<h2><span data-i18n="professor">Professor</span> <span name='attr_profname'></span> (<span name='attr_profpronoun'></span>) <input type='checkbox' name='attr_modifyprof' checked></h2>
-		</div>
-	<div class='2colrow'>
-	<div class='col'><span data-i18n="teaches">Teaches</span><br><span name="attr_schoolclass"></span>
-	</div>
-	<div class='col'><span data-i18n="attributes">Attributes</span><br><span name="attr_profadj1"></span>,<span name="attr_projadj2"></span>
-		</div>
-	
-	</div>
-		<p>
-			<span data-i18n="school-professor">Professor</span>
-		<input type='text' name='attr_profname' placeholder="(Name)" data-i18n-placeholder="name"> <span data-i18n="school-teaches">teaches</span> <input type='text' name='attr_schoolclass' placeholder="(Class Name)"  data-i18n-placeholder="classname">.</p>
-		<p>
-		<input type='text' name='attr_profpronoun' data-i18n-placeholder="pronoun" placeholder="(Pronoun)">&nbsp;<span data-i18n="school-are">are</span>&nbsp;<input type='text' name='attr_profadj1' placeholder="(Adjective)" data-i18n-placeholder="adjective">, <span data-i18n="and">and</span> <input type='text' name='attr_projadj2' placeholder="(Adjective)" data-i18n-placeholder="adjective">.<br> <input type='checkbox' name='attr_modifyprof' checked>
-		</p>		
-	</fieldset>
+		<fieldset class="repeating_professors">
+			<input type='hidden' class='modifyprof' name='attr_modifyprof' value='on'>
+			<div>
+				<h2><span data-i18n="professor">Professor</span> <span name='attr_profname'></span> (<span name='attr_profpronoun'></span>) <input type='checkbox' name='attr_modifyprof' checked></h2>
+			</div>
+			<div class='2colrow'>
+				<div class='col'><span data-i18n="teaches">Teaches</span><br><span name="attr_schoolclass"></span>
+				</div>
+				<div class='col'><span data-i18n="attributes">Attributes</span><br><span name="attr_profadj1"></span>,<span name="attr_projadj2"></span>
+				</div>
+				
+			</div>
+			<p>
+				<span data-i18n="school-professor">Professor</span>
+			<input type='text' name='attr_profname' placeholder="(Name)" data-i18n-placeholder="name"> <span data-i18n="school-teaches">teaches</span> <input type='text' name='attr_schoolclass' placeholder="(Class Name)"  data-i18n-placeholder="classname">.</p>
+			<p>
+				<input type='text' name='attr_profpronoun' data-i18n-placeholder="pronoun" placeholder="(Pronoun)">&nbsp;<span data-i18n="school-are">are</span>&nbsp;<input type='text' name='attr_profadj1' placeholder="(Adjective)" data-i18n-placeholder="adjective">, <span data-i18n="and">and</span> <input type='text' name='attr_projadj2' placeholder="(Adjective)" data-i18n-placeholder="adjective">.<br> <input type='checkbox' name='attr_modifyprof' checked>
+			</p>		
+		</fieldset>
 	</div>
 </div>
 <div class='sheet-page3'>	
 	<div class='sheet-header'>
-	<div class='sheet-pagetogglediv'>	
-	<label class='sheet-pfcontainer'>
-		<input type='checkbox' name='attr_isconfig'>
-		<span class="sheet-pfradio">y
-		</span>		
-	</label>
-	</div>
+		<div class='sheet-pagetogglediv'>	
+			<label class='sheet-pfcontainer'>
+				<input type='checkbox' name='attr_isconfig'>
+				<span class="sheet-pfradio">y
+				</span>		
+			</label>
+		</div>
 	</div>
 	<p>
 		<span data-i18n="sheetisa">This sheet is a</span> <select name='attr_sheettype'>
@@ -293,7 +301,26 @@
 </rolltemplate>
 <script type='text/worker'>
 	"use strict";
-		
+	on("sheet:opened", function (eventInfo) {
+		getAttrs(['sheet_opened'],function (values) {
+			const opened = values.sheet_opened*1||0;
+			if(opened !== 0) return;
+			const settings = {"sheet_opened":1};
+			settings["repeating_hates_"+generateRowID()+"_witchhate"] = "(Noun)";
+			settings["repeating_likes_"+generateRowID()+"_witchlike"] = "(Noun)";
+			settings["repeating_spells_"+generateRowID()+"_hidespell"] = "on";
+			settings["repeating_hates_"+generateRowID()+"_witchhate"] = "(Verb)";
+			settings["repeating_likes_"+generateRowID()+"_witchlike"] = "(Verb)";				
+			settings["repeating_spells_"+generateRowID()+"_hidespell"] = "on";
+			settings["repeating_personality_"+generateRowID()+"_witchpershide"] = 1;
+			settings["repeating_personality_"+generateRowID()+"_witchpershide"] = 1;			
+			settings["repeating_personality_"+generateRowID()+"_witchpershide"] = 1;
+			setAttrs(settings);
+			console.log("Initiated Repeater Fields");
+			console.log(settings);
+		});
+	});
+	
 	// Name formatter for School.
 	on("change:schoolnoun change:schoolname", function(eventInfo) {
 		getAttrs(["sheettype","schoolnoun","schoolname"], function (values) {
