--- a/witches.html
+++ b/witches.html
@@ -225,7 +225,15 @@
 	</p>
 </div>
 <rolltemplate class="sheet-rolltemplate-aw">
-	<table>
+		{{#rollGreater() result 12}}
+			<table class='success'>
+		{{/rollGreater() result 12}}
+		{{#rollLess() result 10}}	
+			<table class='failure'>
+		{{/rollLess() result 10}}
+		{{#rollBetween() result 10 12}}
+			<table>
+		{{/rollBetween() result 10 12}}			
 		<tr>
 			<th colspan="2">{{name}} casts<br>
 				<i>{{#roll_name}}{{roll_name}}{{/roll_name}}{{#roll_mod}}{{roll_mod}}{{/roll_mod}}</i>
@@ -256,7 +264,15 @@
 	</table>
 </rolltemplate>
 <rolltemplate class="sheet-rolltemplate-rr">
-	<table>
+	{{#rollGreater() result 12}}
+		<table class='success'>
+	{{/rollGreater() result 12}}
+	{{#rollLess() result 10}}	
+		<table class='failure'>
+	{{/rollLess() result 10}}
+	{{#rollBetween() result 10 12}}
+		<table>
+	{{/rollBetween() result 10 12}}		
 		<tr>
 			<th colspan="2">{{name}} rolls<br>
 				<i>{{#roll_name}}{{roll_name}}{{/roll_name}}{{#roll_mod}}{{roll_mod}}{{/roll_mod}}</i>
