--- a/witches.html
+++ b/witches.html
@@ -1,65 +1,68 @@
-<!-- Project Hecate v1.0 -->
+<!-- Project Hecate v2.0 -->
 <!-- by EtoileLion -->
 <!-- Game System Copyright Margaret Krohn, used with permission. -->
 <input type='hidden' name='attr_sheet_opened'>
-<input type='hidden' class='sheet-isconfig' name='attr_isconfig' value="0">
-<input type='hidden' class='sheet-sheettype' name='attr_sheettype' value="witch">
-<div class='sheet-witch'>
-	<input type='hidden' class='sheet-witchpage' name='attr_witchpage' value="1">
-    <div class='sheet-header'>
-		<input type='text' name='attr_character_name' placeholder="Character Name" data-i18n-placeholder="charactername">
-		<div class='sheet-head-img'></div>
-		<div class='sheet-pagetogglediv'>	
-			<label class='sheet-pfcontainer'>
+<input type='hidden' class='isconfig' name='attr_isconfig' value="0">
+<input type='hidden' class='sheettype' name='attr_sheettype' value="witch">
+<div class='witch'>
+	<input type='hidden' class='witchpage' name='attr_witchpage' value="1">	
+	<div class='page1 page'>
+		    <div class='header'>
+	    <div class='flexcontainer'>
+		<input type='text' name='attr_character_name' class='name flex' placeholder="Character Name" data-i18n-placeholder="charactername">
+		<div class='head-img'></div>
+		<div class='pagetogglediv'>	
+			<label class='pfcontainer'>
 				<input name='attr_witchpage'  type='radio' value="1" checked>
-				<span class="sheet-pfradio">i
+				<span class="pfradio">i
 				</span>
 			</label>
-			<label class='sheet-pfcontainer'>
+			<label class='pfcontainer'>
 				<input name='attr_witchpage' type='radio' value="2" >
-				<span class="sheet-pfradio">S
+				<span class="pfradio">S
 				</span>		
 			</label>
-			<label class='sheet-pfcontainer'>
+			<label class='pfcontainer'>
 				<input type='checkbox' name='attr_isconfig'>
-				<span class="sheet-pfradio">y
+				<span class="pfradio">y
 				</span>		
 			</label>			
+			</div>
 		</div>		
-	</div>		
-	<div class='sheet-page1 sheet-page'>	
-		<p class='sheet-witchnum'>
+	</div>
+	
+		<p class='witchnum'>
 			<span data-i18n="witch-witchnolabel">Witch #</span>
 			<input type='number' name='attr_witchnumber' min=1 value=1><br>
 			<button type='roll' value="&{template:rr} {{result=[[2d8+?{'Modifier/Penalty?'|0}]]}} {{roll_name=2d8}} {{name=@{character_name}}} ">Roll 2d8</button>
 		</p>		
 		<h2>About Me</h2>		
-		<div class='2colrow'>
-			<div class='col'>
+		<div class='sheet-2colrow'>
+			<div class='sheet-col'>
 				<span data-i18n="physically">Physically</span><br />
 				<input type='text' name='attr_witchphysadj1' data-i18n-placeholder="adjective">
 				<input type='text' name='attr_witchphysadj2'  data-i18n-placeholder="adjective">
 			</div>
-			<div class='col'>
+			<div class='sheet-col'>
 				<span data-i18n="hair">Hair</span><br><input type='text' name='attr_witchhair' data-i18n-placeholder="adjective"><br> <span data-i18n="eyes">Eyes</span><br><input type='text' name='attr_witcheyes' data-i18n-placeholder="adjective">
 			</div>
 		</div>
-		<div class='3colrow'>
-			<div class='col'>
+		<div class='sheet-3colrow'>
+			<div class='sheet-col'>
 				<span data-i18n="personality">Personality</span>
 				<fieldset class='repeating_personality'>
 					<input type='hidden' name='attr_witchpershide'>
 					<input type='text' name='attr_witchpersadj' data-i18n-placeholder="adjective">
 				</fieldset>
 			</div>			
-			<div class='col'>
+			<div class='sheet-col'>
 				<span data-i18n="like">Likes</span>
 				<fieldset class='repeating_likes'>
 					<input type='hidden' name='attr_witchlikehide'>		
 					<input type='text' name='attr_witchlike'>
 				</fieldset>			
 			</div>
-			<div class='col'>
+			<div class='sheet-col'>
 				<span data-i18n="hate">Hates</span>
 				<fieldset class='repeating_hates'>
 					<input type='hidden' name='attr_witchhatehide'>		
@@ -69,48 +72,71 @@
 		</div>
 		<hr>
 		<h2>My School</h2>
-		<div class='sheet-flexrow'>
-			<span data-i18n="favoriteprofis">Favorite Professor</span>&nbsp;<input type='text' name='attr_favprof'  data-i18n-placeholder="professor">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_favprofreason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+		<div class='flexrow'>
+			<span data-i18n="favoriteprofis">Favorite Professor</span>&nbsp;<input type='text' name='attr_favprof'  data-i18n-placeholder="professor">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_favprofreason' data-i18n-placeholder="reason" class='flexfield'>
 		</div>
-		<div class='sheet-flexrow'>
-			<span data-i18n="favoriteplaceis">My favorite place in the school is</span>&nbsp;<input type='text' name='attr_favloc' data-i18n-placeholder="location">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_favlocreason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+		<div class='flexrow'>
+			<span data-i18n="favoriteplaceis">My favorite place in the school is</span>&nbsp;<input type='text' name='attr_favloc' data-i18n-placeholder="location">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_favlocreason' data-i18n-placeholder="reason" class='flexfield'>
 		</div>
-		<div class='sheet-flexrow'>
-			<input type='text' name='attr_favfriend' data-i18n-placeholder="student">&nbsp;<span data-i18n="bffbecause">is my best friend because</span>&nbsp;<input type='text' name='attr_favfriendreason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+		<div class='flexrow'>
+			<input type='text' name='attr_favfriend' data-i18n-placeholder="student">&nbsp;<span data-i18n="bffbecause">is my best friend because</span>&nbsp;<input type='text' name='attr_favfriendreason' data-i18n-placeholder="reason" class='flexfield'>
 		</div>
-		<div class='sheet-flexrow'>
-			<span data-i18n="worriedabout">I'm worried about</span>&nbsp;<input type='text' name='attr_favworry' data-i18n-placeholder="student">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_favworryreason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+		<div class='flexrow'>
+			<span data-i18n="worriedabout">I'm worried about</span>&nbsp;<input type='text' name='attr_favworry' data-i18n-placeholder="student">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_favworryreason' data-i18n-placeholder="reason" class='flexfield'>
 		</div>
-		<div class='sheet-flexrow'>
-			<span data-i18n="admire">I admire</span>&nbsp;<input type='text' name='attr_favadmire' data-i18n-placeholder="student">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_favadmirereason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+		<div class='flexrow'>
+			<span data-i18n="admire">I admire</span>&nbsp;<input type='text' name='attr_favadmire' data-i18n-placeholder="student">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_favadmirereason' data-i18n-placeholder="reason" class='flexfield'>
 		</div>
 		<hr>
 		<h2>My Family</h2>
 		<div>
 			<span data-i18n="familyis">My family is</span>&nbsp;<input type='text' name='attr_famadj1' data-i18n-placeholder="adjective">,&nbsp;<input type='text' name='attr_famadj2' data-i18n-placeholder="adjective">,&nbsp;<span data-i18n="and">and</span>&nbsp;<input type='text' name='attr_famadj3' data-i18n-placeholder="adjective">.
 		</div>
-		<div class='sheet-flexrow'>
-			<span data-i18n="closesttomy">I am closest to my</span>&nbsp;<input type='text' name='attr_famclose' data-i18n-placeholder="fammember">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_famclosereason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+		<div class='flexrow'>
+			<span data-i18n="closesttomy">I am closest to my</span>&nbsp;<input type='text' name='attr_famclose' data-i18n-placeholder="fammember">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_famclosereason' data-i18n-placeholder="reason" class='flexfield'>
 		</div>
 		<div>
 			<span data-i18n="houseis">My house is</span>&nbsp;<input type='text' name='attr_houseadj1' data-i18n-placeholder="adjective">,&nbsp;<input type='text' name='attr_houseadj2' data-i18n-placeholder="adjective">,&nbsp;<span data-i18n="and">and</span>&nbsp;<input type='text' name='attr_houseadj3' data-i18n-placeholder="adjective">
 		</div>
-		<div class='sheet-flexrow'>
-			<span data-i18n="favoritehouseplaceis">My favorite place in my house is</span>&nbsp;<input type='text' name='attr_houseloc' data-i18n-placeholder="location">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_houselocreason' data-i18n-placeholder="reason" class='sheet-flexfield'>
+		<div class='flexrow'>
+			<span data-i18n="favoritehouseplaceis">My favorite place in my house is</span>&nbsp;<input type='text' name='attr_houseloc' data-i18n-placeholder="location">&nbsp;<span data-i18n="because">because</span>&nbsp;<input type='text' name='attr_houselocreason' data-i18n-placeholder="reason" class='flexfield'>
 		</div>
 	</div>
-    <div class='sheet-page2 sheet-page'>
+    <div class='page2 page'>
+		    <div class='header'>
+	    <div class='flexcontainer'>
+		<input type='text' name='attr_character_name' class='name flex' placeholder="Character Name" data-i18n-placeholder="charactername">
+		<div class='head-img'></div>
+		<div class='pagetogglediv'>	
+			<label class='pfcontainer'>
+				<input name='attr_witchpage'  type='radio' value="1" checked>
+				<span class="pfradio">i
+				</span>
+			</label>
+			<label class='pfcontainer'>
+				<input name='attr_witchpage' type='radio' value="2" >
+				<span class="pfradio">S
+				</span>		
+			</label>
+			<label class='pfcontainer'>
+				<input type='checkbox' name='attr_isconfig'>
+				<span class="pfradio">y
+				</span>		
+			</label>			
+			</div>
+		</div>		
+	</div>	
 		<h2>My Spellbook</h2>
 		<p>
 			<span data-i18n="myspellbookis">My spellbook is</span> <input type='text' name='attr_spellbookadj1'  data-i18n-placeholder="adjective"> and  <input type='text' name='attr_spellbookadj2'  data-i18n-placeholder="adjective">
 		</p>
 		<fieldset class='repeating_spells'>
 			<input type='hidden' name='attr_witchspellhide'>
-		    <div class='sheet-buttonrow'>
+		    <div class='buttonrow'>
 				<div>
-					<input type='hidden' name='attr_hidespell' class='sheet-hidespellcb' value="on">			    
+					<input type='hidden' name='attr_hidespell' class='hidespellcb' value="on">			    
 					<button type='roll' value="&{template:aw} {{result=[[2d8+@{level}+?{'Modifier/Penalty?'|0}]]}} {{roll_name=@{spellname}}} {{name=@{character_name}}} ">
-						<button type='roll' class='sheet-squawk sheet-hidespell' value="&{template:squawk} {{spellname=@{spellname}}} {{desc=@{desc}}} {{label=Level @{level}}}">
+						<button type='roll' class='squawk hidespell' value="&{template:squawk} {{spellname=@{spellname}}} {{desc=@{desc}}} {{label=Level @{level}}}">
 						</button>
 					</button>			
 				</div>
@@ -120,13 +146,13 @@
 				<div>
 					<label data-i18n="spelllevel">Level</label>
 					<input type='number' name='attr_level' min=1 value=1>
-					<input type='checkbox' name='attr_hidespell' class='sheet-hidespellcb' checked>
+					<input type='checkbox' name='attr_hidespell' class='hidespellcb' checked>
 				</div>
 			</div>
-			<input type='hidden' name='attr_hidespell' class='sheet-hidespellcb' value="on">
-			<div class='sheet-descrow'>
+			<input type='hidden' name='attr_hidespell' class='hidespellcb' value="on">
+			<div class='descrow'>
 				<div>
-					<button type='roll' class='sheet-squawk' value="&{template:squawk} {{spellname=@{spellname}}} {{desc=@{desc}}} {{label=Level @{level}}}">
+					<button type='roll' class='squawk' value="&{template:squawk} {{spellname=@{spellname}}} {{desc=@{desc}}} {{label=Level @{level}}}">
 					</button>
 				</div>
 				<div>
@@ -135,7 +161,7 @@
 				<textarea name='attr_desc'>
 				</textarea>
 			</div>			
-			<div class='sheet-2colrow sheet-castsrow'>
+			<div class='sheet-2colrow castsrow'>
 				<div class='sheet-col'>
 					<label data-i18n="spellsuccs">Successful Casts</label><br>
 					<input type='checkbox' name='attr_successcast1'>
@@ -155,14 +181,14 @@
 	</div>
 	
 </div>
-<div class='sheet-school'>
-	<div class='sheet-header'>
+<div class='school'>
+	<div class='header'>
 		<input type='text' name='attr_character_name' placeholder="Character Name" data-i18n-placeholder="charactername">
-		<div class='sheet-head-img'></div>
-		<div class='sheet-pagetogglediv'>	
-			<label class='sheet-pfcontainer'>
+		<div class='head-img'></div>
+		<div class='pagetogglediv'>	
+			<label class='pfcontainer'>
 				<input type='checkbox' name='attr_isconfig'>
-				<span class="sheet-pfradio">y
+				<span class="pfradio">y
 				</span>		
 			</label>
 		</div>		
@@ -191,10 +217,10 @@
 			<div>
 				<h2><span data-i18n="professor">Professor</span> <span name='attr_profname'></span> (<span name='attr_profpronoun'></span>) <input type='checkbox' name='attr_modifyprof' checked></h2>
 			</div>
-			<div class='2colrow'>
-				<div class='col'><span data-i18n="teaches">Teaches</span><br><span name="attr_schoolclass"></span>
+			<div class='sheet-2colrow'>
+				<div class='sheet-col'><span data-i18n="teaches">Teaches</span><br><span name="attr_schoolclass"></span>
 				</div>
-				<div class='col'><span data-i18n="attributes">Attributes</span><br><span name="attr_profadj1"></span>,<span name="attr_projadj2"></span>
+				<div class='sheet-col'><span data-i18n="attributes">Attributes</span><br><span name="attr_profadj1"></span>,<span name="attr_projadj2"></span>
 				</div>
 				
 			</div>
@@ -207,12 +233,12 @@
 		</fieldset>
 	</div>
 </div>
-<div class='sheet-page3'>	
-	<div class='sheet-header'>
-		<div class='sheet-pagetogglediv'>	
-			<label class='sheet-pfcontainer'>
+<div class='page3'>	
+	<div class='header'>
+		<div class='pagetogglediv'>	
+			<label class='pfcontainer'>
 				<input type='checkbox' name='attr_isconfig'>
-				<span class="sheet-pfradio">y
+				<span class="pfradio">y
 				</span>		
 			</label>
 		</div>
@@ -256,7 +282,12 @@
 	</table>
 </rolltemplate>
 <rolltemplate class="sheet-rolltemplate-rr">
-	<table>
+	<table class="{{#rollGreater() result 12}}
+			success
+			{{/rollGreater() result 12}}
+			{{#rollLess() result 10}}
+			failure
+			{{/rollLess() result 10}}">
 		<tr>
 			<th colspan="2">{{name}} rolls<br>
 				<i>{{#roll_name}}{{roll_name}}{{/roll_name}}{{#roll_mod}}{{roll_mod}}{{/roll_mod}}</i>
@@ -287,7 +318,7 @@
 	</table>
 </rolltemplate>
 <rolltemplate class="sheet-rolltemplate-squawk">
-	<table class='sheet-squawkbox'>
+	<table class='squawkbox'>
 		<tr>
 			<th colspan="2"><span>{{spellname}}</span>{{#label}}<br>
 			<i>({{label}})</i>{{/label}}</th>
@@ -299,6 +330,7 @@
 		</tr>
 	</table>	
 </rolltemplate>
+
 <script type='text/worker'>
 	"use strict";
 	on("sheet:opened", function (eventInfo) {
